--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,19 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id 'kotlin-kapt'
 }
 
-apply plugin: 'kotlin-kapt'
+apply from: "$rootDir/deps_versions.gradle"
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "30.0.3"
+    compileSdkVersion versions.compile_sdk
+    buildToolsVersion versions.build_tools
 
     defaultConfig {
         applicationId "com.bhaktaprogram.notehelper"
-        minSdkVersion 23
-        targetSdkVersion 29
+        minSdkVersion versions.min_sdk
+        targetSdkVersion versions.target_sdk
         versionCode 1
         versionName "1.0"
 
@@ -26,11 +27,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility versions.java
+        targetCompatibility versions.java
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = versions.java
     }
     buildFeatures {
         viewBinding true
@@ -39,37 +40,31 @@ android {
 
 dependencies {
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.2'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation kotlin
+    implementation coroutines
+    implementation core_ktx
+    implementation appcompat
+    implementation material
+    implementation constraintlayout
+    implementation recyclerview
 
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
+    implementation lifecycle.viewmodel_ktx
+    implementation lifecycle.runtime_ktx
+    implementation lifecycle.common_java8
 
-    def lifecycle_version = '2.3.0'
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:$lifecycle_version"
-    implementation "androidx.lifecycle:lifecycle-common-java8:$lifecycle_version"
+    implementation retrofit.retrofit
+    implementation retrofit.converter_gson
+    implementation okhttp3.logging_interceptor
 
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
+    implementation dagger.dagger
+    kapt dagger.compiler
 
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation room.runtime
+    implementation room.ktx
+    kapt room.compiler
 
-    def dagger = '2.32'
-    implementation "com.google.dagger:dagger:$dagger"
-    kapt "com.google.dagger:dagger-compiler:$dagger"
+    testImplementation test.junit
 
-    def room_version = "2.2.6"
-
-    implementation "androidx.room:room-runtime:$room_version"
-    implementation "androidx.room:room-ktx:$room_version"
-    kapt "androidx.room:room-compiler:$room_version"
-
-    testImplementation 'junit:junit:4.13.2'
-
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation test.androidx_ext
+    androidTestImplementation test.espresso
 }
