--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'kotlin-android'
 }
 
-apply from: "$rootDir/deps_versions.gradle"
+apply from: "$rootDir/versions.gradle"
 
 android {
     compileSdkVersion versions.compile_sdk
@@ -30,7 +30,7 @@ android {
         targetCompatibility versions.java
     }
     kotlinOptions {
-        jvmTarget = versions.java
+        jvmTarget = versions.java.toString()
     }
 }
 
