--- a/core/core_api/src/main/AndroidManifest.xml
+++ b/core/core_api/src/main/AndroidManifest.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.bhaktaprogram.notehelper.coreapi">
+<manifest package="com.bhaktaprogram.coreapi">
 
 </manifest>
