Add notes mediator interface

--- a/core/core_api/build.gradle
+++ b/core/core_api/build.gradle
@@ -38,6 +38,7 @@ dependencies {
 
     implementation kotlin
     implementation core_ktx
+    implementation appcompat
 
     testImplementation test.junit
 }
