Impl notes mediator

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,8 @@ dependencies {
 
     implementation project(':repository')
     implementation project(':main')
+    implementation project(':core:core')
+    implementation project(':features:notes')
 
     implementation kotlin
     implementation coroutines
