Fix core dependency in main module

--- a/main/build.gradle
+++ b/main/build.gradle
@@ -37,7 +37,7 @@ android {
 
 dependencies {
 
-    implementation project(':core:core_api')
+    implementation project(':core:core')
     implementation project(':features:notes')
 
     implementation kotlin
