Move repository module to core directory

--- a/core/core/build.gradle
+++ b/core/core/build.gradle
@@ -37,6 +37,7 @@ android {
 dependencies {
 
     api project(':core:core_api')
+    implementation project(':core:core_impl')
 
     implementation kotlin
     implementation core_ktx
