--- a/main/build.gradle
+++ b/main/build.gradle
@@ -46,8 +46,8 @@ dependencies {
     implementation appcompat
     implementation material
 
-    implementation dagger.dagger
-    kapt dagger.compiler
+    implementation dagger
+    kapt dagger_compiler
 
     testImplementation test.junit
 }
