--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,8 +54,8 @@ dependencies {
     implementation retrofit.converter_gson
     implementation okhttp3.logging_interceptor
 
-    implementation dagger.dagger
-    kapt dagger.compiler
+    implementation dagger
+    kapt dagger_compiler
 
     testImplementation test.junit
 
