--- a/features/notes/build.gradle
+++ b/features/notes/build.gradle
@@ -57,6 +57,8 @@ dependencies {
     implementation dagger
     kapt dagger_compiler
 
+    implementation view_binding_delegate
+
     testImplementation test.junit
 
     androidTestImplementation test.androidx_ext
