Add Timber for logging

--- a/core/core/build.gradle
+++ b/core/core/build.gradle
@@ -39,6 +39,8 @@ dependencies {
     api project(':core:core_api')
     implementation project(':core:core_impl')
 
+    api timber
+
     implementation kotlin
     implementation core_ktx
 
