--- a/core/repository/build.gradle
+++ b/core/repository/build.gradle
@@ -37,6 +37,8 @@ android {
 
 dependencies {
 
+    implementation project(':core:core_api')
+
     implementation kotlin
     implementation core_ktx
 
