--- a/core/core/build.gradle
+++ b/core/core/build.gradle
@@ -36,9 +36,9 @@ android {
 
 dependencies {
 
-    api project(':core:core_api')
-    implementation project(':core:core_impl')
-    implementation project(':core:repository')
+    api project(':core:core-api')
+    implementation project(':core:core-impl')
+    implementation project(':core:database')
 
     api timber
 
