--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 include ':app', ':main'
-include ':core:core', ':core:core_api', ':core:core_impl', 'core:repository'
+include ':core:core', ':core:core-api', ':core:core-impl', 'core:database'
 include ':features:notes'
 rootProject.name = "Note Helper"
