Create edit note module

--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,9 @@
 buildscript {
 
     apply from: "$rootDir/versions.gradle"
+    ext {
+        versions.kotlin = '1.4.32'
+    }
 
     repositories {
         google()
