--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 include ':app', ':main'
 include ':core:core', ':core:core-api', ':core:core-impl', 'core:database'
-include ':features:notes'
+include ':features:notes', ':features:edit-note'
 rootProject.name = "Note Helper"
