Show notes by cicerone

--- a/core/core-api/build.gradle
+++ b/core/core-api/build.gradle
@@ -40,5 +40,7 @@ dependencies {
     implementation core_ktx
     implementation appcompat
 
+    api cicerone
+
     testImplementation test.junit
 }
