--- a/core/core-impl/build.gradle
+++ b/core/core-impl/build.gradle
@@ -46,5 +46,5 @@ dependencies {
     implementation dagger
     kapt dagger_compiler
 
-    testImplementation test.junit
+    testImplementation junit
 }
