--- a/features/notes/build.gradle
+++ b/features/notes/build.gradle
@@ -48,9 +48,9 @@ dependencies {
     implementation appcompat
     implementation material
 
-    implementation lifecycle.viewmodel_ktx
-    implementation lifecycle.runtime_ktx
-    implementation lifecycle.common_java8
+    implementation lifecycle_viewmodel_ktx
+    implementation lifecycle_runtime_ktx
+    implementation lifecycle_common_java8
 
     implementation recyclerview
 
@@ -59,8 +59,8 @@ dependencies {
 
     implementation view_binding_delegate
 
-    testImplementation test.junit
+    testImplementation junit
 
-    androidTestImplementation test.androidx_ext
-    androidTestImplementation test.espresso
+    androidTestImplementation junit_ext
+    androidTestImplementation espresso
 }
