--- a/main/build.gradle
+++ b/main/build.gradle
@@ -49,5 +49,5 @@ dependencies {
     implementation dagger
     kapt dagger_compiler
 
-    testImplementation test.junit
+    testImplementation junit
 }
