--- a/versions.gradle
+++ b/versions.gradle
@@ -26,36 +26,26 @@ ext.constraintlayout = "androidx.constraintlayout:constraintlayout:2.0.4"
 ext.recyclerview = "androidx.recyclerview:recyclerview:1.1.0"
 ext.core_ktx = "androidx.core:core-ktx:1.3.2"
 
-ext.lifecycle = [
-        viewmodel_ktx: "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle",
-        runtime_ktx  : "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle",
-        common_java8 : "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle"
-]
+ext.lifecycle_viewmodel_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle"
+ext.lifecycle_runtime_ktx = "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle"
+ext.lifecycle_common_java8 = "androidx.lifecycle:lifecycle-common-java8:$versions.lifecycle"
 
-ext.retrofit = [
-        retrofit      : "com.squareup.retrofit2:retrofit:$versions.retrofit",
-        converter_gson: "com.squareup.retrofit2:converter-gson:$versions.retrofit"
-]
+ext.retrofit = "com.squareup.retrofit2:retrofit:$versions.retrofit"
+ext.converter_gson = "com.squareup.retrofit2:converter-gson:$versions.retrofit"
 
-ext.okhttp3 = [
-        okhttp             : "com.squareup.okhttp3:okhttp:$versions.okhttp3",
-        logging_interceptor: "com.squareup.okhttp3:logging-interceptor:$versions.okhttp3"
-]
+ext.okhttp = "com.squareup.okhttp3:okhttp:$versions.okhttp3"
+ext.logging_interceptor = "com.squareup.okhttp3:logging-interceptor:$versions.okhttp3"
 
 ext.dagger = "com.google.dagger:dagger:$versions.dagger"
 ext.dagger_compiler = "com.google.dagger:dagger-compiler:$versions.dagger"
 
-ext.room = [
-        runtime : "androidx.room:room-runtime:$versions.room",
-        ktx     : "androidx.room:room-ktx:$versions.room",
-        compiler: "androidx.room:room-compiler:$versions.room",
-]
+ext.room_runtime = "androidx.room:room-runtime:$versions.room"
+ext.room_ktx = "androidx.room:room-ktx:$versions.room"
+ext.room_compiler = "androidx.room:room-compiler:$versions.room"
 
-ext.test = [
-        junit       : 'junit:junit:4.13.2',
-        androidx_ext: 'androidx.test.ext:junit:1.1.2',
-        espresso    : 'androidx.test.espresso:espresso-core:3.3.0'
-]
+ext.junit = 'junit:junit:4.13.2'
+ext.junit_ext = 'androidx.test.ext:junit:1.1.2'
+ext.espresso = 'androidx.test.espresso:espresso-core:3.3.0'
 
 // ViewBindingPropertyDelegate https://github.com/kirich1409/ViewBindingPropertyDelegate
 ext.view_binding_delegate = "com.github.kirich1409:viewbindingpropertydelegate:1.4.4"
