--- a/core/core/build.gradle
+++ b/core/core/build.gradle
@@ -40,10 +40,18 @@ dependencies {
     implementation project(':core:core-impl')
     implementation project(':core:database')
 
-    api timber
+    api kotlin
+    api coroutines
+    api core_ktx
+    api appcompat
+    api material
 
-    implementation kotlin
-    implementation core_ktx
+    api lifecycle_viewmodel_ktx
+    api lifecycle_runtime_ktx
+    api lifecycle_common_java8
+
+    api view_binding_delegate
+    api timber
 
     testImplementation junit
 }
