--- a/versions.gradle
+++ b/versions.gradle
@@ -5,6 +5,7 @@ ext.versions = [
         target_sdk : 30,
         java       : JavaVersion.VERSION_1_8,
 
+        fragment   : '1.3.2',
         gradle     : '4.1.3',
         kotlin     : '1.4.31',
         lifecycle  : '2.3.0',
@@ -25,6 +26,8 @@ ext.material = "com.google.android.material:material:1.3.0"
 ext.constraintlayout = "androidx.constraintlayout:constraintlayout:2.0.4"
 ext.recyclerview = "androidx.recyclerview:recyclerview:1.1.0"
 ext.core_ktx = "androidx.core:core-ktx:1.3.2"
+
+ext.fragment_ktx = "androidx.fragment:fragment-ktx:$versions.fragment"
 
 ext.lifecycle_viewmodel_ktx = "androidx.lifecycle:lifecycle-viewmodel-ktx:$versions.lifecycle"
 ext.lifecycle_runtime_ktx = "androidx.lifecycle:lifecycle-runtime-ktx:$versions.lifecycle"
