Refactor gradle files

--- a/core/core-api/build.gradle
+++ b/core/core-api/build.gradle
@@ -37,10 +37,9 @@ android {
 dependencies {
 
     implementation kotlin
-    implementation core_ktx
     implementation appcompat
 
-    api cicerone
+    implementation cicerone
 
-    testImplementation junit
+    applyTests(this)
 }
