--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,21 +45,9 @@ dependencies {
     implementation project(':features:notes')
     implementation project(':features:edit-note')
 
-    implementation kotlin
-    implementation coroutines
-    implementation core_ktx
-    implementation appcompat
-    implementation material
-
     implementation retrofit
     implementation converter_gson
     implementation logging_interceptor
 
-    implementation dagger
-    kapt dagger_compiler
-
-    testImplementation junit
-
-    androidTestImplementation junit_ext
-    androidTestImplementation espresso
+    applyDagger(this)
 }
