Separate insert and update to database

--- a/core/core-impl/build.gradle
+++ b/core/core-impl/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     implementation kotlin
     implementation core_ktx
 
+    implementation timber
+
     applyDagger(this)
 
     applyTests(this)
