--- a/settings.gradle
+++ b/settings.gradle
@@ -1,3 +1,4 @@
+include ':test'
 include ':app', ':main'
 include ':core:core', ':core:core-api', ':core:core-impl', 'core:database'
 include ':features:notes', ':features:edit-note'
