--- a/versions.gradle
+++ b/versions.gradle
@@ -20,7 +20,9 @@ ext.versions = [
 ]
 
 ext.kotlin = "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
-ext.coroutines = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
+ext.coroutines_android = "org.jetbrains.kotlinx:kotlinx-coroutines-android:$versions.coroutines"
+ext.coroutines_core = "org.jetbrains.kotlinx:kotlinx-coroutines-core:$versions.coroutines"
+ext.coroutines_test = "org.jetbrains.kotlinx:kotlinx-coroutines-test:$versions.coroutines"
 ext.appcompat = "androidx.appcompat:appcompat:1.2.0"
 ext.material = "com.google.android.material:material:1.3.0"
 ext.constraintlayout = "androidx.constraintlayout:constraintlayout:2.0.4"
@@ -62,7 +64,7 @@ ext {
     applyCommonFeatureDependencies = { module ->
         module.dependencies {
             api kotlin
-            api coroutines
+            api coroutines_android
             api core_ktx
             api appcompat
             api material
@@ -84,6 +86,8 @@ ext {
         module.dependencies {
             testImplementation junit
             testImplementation mokk
+            testImplementation coroutines_test
+            testImplementation project(':test')
         }
     }
 }
