--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,8 @@ android {
     buildFeatures {
         viewBinding true
     }
+
+    testOptions.unitTests.includeAndroidResources = true
 }
 
 dependencies {
@@ -52,4 +54,6 @@ dependencies {
     applyDagger(this)
 
     applyTests(this)
+
+    testImplementation robolectric
 }
