--- a/versions.gradle
+++ b/versions.gradle
@@ -52,7 +52,7 @@ ext.room_compiler = "androidx.room:room-compiler:$versions.room"
 ext.junit = 'junit:junit:4.13.2'
 ext.junit_ext = 'androidx.test.ext:junit:1.1.2'
 ext.espresso = 'androidx.test.espresso:espresso-core:3.3.0'
-ext.mokk = "io.mockk:mockk:1.11.0"
+ext.mockk = "io.mockk:mockk:1.11.0"
 ext.robolectric = "org.robolectric:robolectric:4.5.1"
 
 // ViewBindingPropertyDelegate https://github.com/kirich1409/ViewBindingPropertyDelegate
@@ -87,7 +87,7 @@ ext {
     applyTests = { module ->
         module.dependencies {
             testImplementation junit
-            testImplementation mokk
+            testImplementation mockk
             testImplementation coroutines_test
             testImplementation project(':test')
         }
