--- a/versions.gradle
+++ b/versions.gradle
@@ -54,6 +54,9 @@ ext.junit_ext = 'androidx.test.ext:junit:1.1.2'
 ext.espresso = 'androidx.test.espresso:espresso-core:3.3.0'
 ext.mockk = "io.mockk:mockk:1.11.0"
 ext.robolectric = "org.robolectric:robolectric:4.5.1"
+ext.fragment_testing = "androidx.fragment:fragment-testing:1.3.3"
+ext.test_runner = "androidx.test:runner:1.3.0"
+ext.test_rules = "androidx.test:rules:1.3.0"
 
 // ViewBindingPropertyDelegate https://github.com/kirich1409/ViewBindingPropertyDelegate
 ext.view_binding_delegate = "com.github.kirich1409:viewbindingpropertydelegate:1.4.4"
