--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
-include ':test'
 include ':app', ':main'
 include ':core:core', ':core:core-api', ':core:core-impl', 'core:database'
 include ':features:notes', ':features:edit-note'
+include ':test'
+include ':lint-rules'
 rootProject.name = "Note Helper"
