--- a/versions.gradle
+++ b/versions.gradle
@@ -17,7 +17,8 @@ ext.versions = [
         okhttp3    : '4.9.0',
         dagger     : '2.33',
 
-        truth      : '1.3.0'
+        truth      : '1.3.0',
+        detekt     : '1.17.1'
 ]
 
 ext.kotlin = "org.jetbrains.kotlin:kotlin-stdlib:$versions.kotlin"
@@ -54,6 +55,8 @@ ext.junit_ext = 'androidx.test.ext:junit:1.1.2'
 ext.espresso = 'androidx.test.espresso:espresso-core:3.3.0'
 ext.mockk = "io.mockk:mockk:1.11.0"
 ext.robolectric = "org.robolectric:robolectric:4.5.1"
+
+ext.detekt_cli = "io.gitlab.arturbosch.detekt:detekt-cli:$versions.detekt"
 
 // ViewBindingPropertyDelegate https://github.com/kirich1409/ViewBindingPropertyDelegate
 ext.view_binding_delegate = "com.github.kirich1409:viewbindingpropertydelegate:1.4.4"
